# kNN_MOF_m

./: .gitignore  README.md  station_id.csv
data_example/: dly_air_temperature.csv  gp.txt
scr/: CMakeLists.txt  Func_Covariate.c  Func_Covariate.h  Func_Disaggregate.c  Func_Disaggregate.h  Func_Fragments.c  Func_Fragments.h  Func_Initialize.c  Func_Initialize.h  Func_MD.c  Func_MD.h  Func_Prepro.c  Func_Prepro.h  Func_Print.c  Func_Print.h  Func_SSIM.c  Func_SSIM.h  Func_Solar.c  Func_Solar.h  Func_dataIO.c  Func_dataIO.h  Func_kNN.c  Func_kNN.h  def_struct.h  main.c
